--- a/privacy.html
+++ b/privacy.html
@@ -2,7 +2,7 @@
 <html lang="uk">
 <head>
   <meta charset="UTF-8">
-  <title>Privacy Policy — AutomatorApp</title>
+  <title>Terms of Use — AutomatorApp</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -16,17 +16,14 @@
   </nav>
 
   <main class="container">
-    <h1>Privacy Policy</h1>
-    <p>Ми не продаємо та не передаємо персональні дані третім сторонам. Додаток може обробляти дані,
-      необхідні для роботи сценаріїв (наприклад, технічні логи) — локально на пристрої або у вибраних вами інтеграціях
-      (Firebase/власний сервер). Ви можете вимкнути інтеграції у будь-який час.</p>
-    <h3>Збір даних</h3>
+    <h1>Terms of Use</h1>
+    <p>Використовуючи додаток, ви погоджуєтесь відповідати за сценарії, які запускаєте, та дотримуватись правил
+      використання сторонніх сервісів. Додаток надається «як є», без гарантій.</p>
     <ul>
-      <li>Опціонально: email для облікового запису (якщо ввімкнена реєстрація).</li>
-      <li>Технічні журнали помилок — для діагностики (локально/сервер за вашим вибором).</li>
+      <li>Не використовуйте для порушення законів або правил платформ.</li>
+      <li>Резервні копії сценаріїв — відповідальність користувача.</li>
+      <li>Підтримка здійснюється в межах доступних каналів зв’язку.</li>
     </ul>
-    <h3>Контакти</h3>
-    <p>Запити щодо видалення даних: див. сторінку <a href="contact.html">Контакти</a>.</p>
   </main>
 
   <footer class="footer">© <span id="y"></span> AutomatorApp</footer>
