--- a/privacy.html
+++ b/privacy.html
@@ -2,7 +2,7 @@
 <html lang="uk">
 <head>
   <meta charset="UTF-8">
-  <title>Terms of Use — AutomatorApp</title>
+  <title>Контакти — AutomatorApp</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -16,14 +16,12 @@
   </nav>
 
   <main class="container">
-    <h1>Terms of Use</h1>
-    <p>Використовуючи додаток, ви погоджуєтесь відповідати за сценарії, які запускаєте, та дотримуватись правил
-      використання сторонніх сервісів. Додаток надається «як є», без гарантій.</p>
-    <ul>
-      <li>Не використовуйте для порушення законів або правил платформ.</li>
-      <li>Резервні копії сценаріїв — відповідальність користувача.</li>
-      <li>Підтримка здійснюється в межах доступних каналів зв’язку.</li>
-    </ul>
+    <h1>Контакти</h1>
+    <div class="card">
+      <p>Email підтримки: <a href="mailto:support@myapp.com">support@myapp.com</a></p>
+      <p>Telegram: <a href="https://t.me/your_username" target="_blank">@your_username</a></p>
+      <p>Для запитів на видалення даних — вкажіть email облікового запису.</p>
+    </div>
   </main>
 
   <footer class="footer">© <span id="y"></span> AutomatorApp</footer>
