--- a/checkout.html
+++ b/checkout.html
@@ -1,28 +1,59 @@
 <!doctype html>
-<html lang="en">
+<html lang="uk">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Checkout</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Оплата 30 днів</title>
+
+  <!-- Paddle v2 -->
   <script src="https://cdn.paddle.com/paddle/v2/paddle.js"></script>
+
+  <!-- (опц.) CSP — тримай мінімально лояльною, або додай у <meta http-equiv> -->
+  <!-- Якщо раптом буде помилка завантаження скриптів Paddle, прибери/послаб CSP. -->
+  <style>
+    body { font-family: system-ui, Arial; margin: 0; padding: 24px; }
+    .wrap { max-width: 560px; margin: 0 auto; }
+    .card { border: 1px solid #ddd; border-radius: 12px; padding: 20px; }
+    button { padding: 12px 18px; border: 0; border-radius: 8px; cursor: pointer; }
+    small { color: #666; }
+  </style>
 </head>
 <body>
-  <h1>Оплата</h1>
-  <button id="buy">Купити 30 днів</button>
+  <div class="wrap">
+    <h1>Оформлення ліцензії (30 днів)</h1>
+    <div class="card">
+      <p id="status">Натисни, щоб відкрити чек-аут.</p>
+      <button id="buy">Купити за $1.00</button>
+      <p><small>Після оплати додаток автоматично отримає ліцензію.</small></p>
+    </div>
+  </div>
 
   <script>
-    // Ініціалізація Paddle — вставляєш свій client token з Dashboard
-    Paddle.Initialize({ token: "YOUR_PADDLE_CLIENT_TOKEN" });
+    // 1) Ініціалізація Paddle
+    // Sandbox: Paddle.Initialize({ token: "YOUR_PADDLE_CLIENT_TOKEN", environment: "sandbox" });
+    // Live:    Paddle.Initialize({ token: "YOUR_PADDLE_CLIENT_TOKEN" });
+    Paddle.Initialize({ token: "pdl_live_apikey_01k4x6zaenkcazx6m6b19vajmx_eHZ8t0D9h4ffD1q2xe59eD_Asx", environment: "sandbox" });
 
-    // Беремо userId з query (наприклад, ?uid=123)
+    // 2) userId з query (?uid=...)
     const params = new URLSearchParams(location.search);
     const userId = params.get("uid") || "guest";
 
-    // Кнопка "Купити"
+    // 3) Відкрити Hosted Checkout
+    const PRICE_ID = "pri_01k4tddwahcwkfkqyxn72pmqe0";
     document.getElementById("buy").onclick = () => {
+      document.getElementById("status").textContent = "Відкриваю чек-аут…";
       Paddle.Checkout.open({
-        items: [{ priceId: "pri_01k4tddwahcwkfkqyxn72pmqe0", quantity: 1 }],
-        customer: { customData: { user_id: userId } }
+        items: [{ priceId: PRICE_ID, quantity: 1 }],
+        customer: { customData: { user_id: userId } },
+
+        // (опц.) Повернення у застосунок (deep link):
+        // returnUrl: "myapp://after-purchase",
+        // (опц.) Успішна сторінка:
+        // successUrl: "https://b0b999.github.io/automatorapp-site/success.html",
+
+        closeCallback: () => {
+          document.getElementById("status").textContent = "Вікно закрито. Спробуй ще.";
+        }
       });
     };
   </script>
