--- a/checkout.html
+++ b/checkout.html
@@ -29,8 +29,7 @@
   <script>
     // 1) Ініціалізація Paddle із sandbox client-side token
     Paddle.Initialize({
-      token: "test_6fe6ea7c8f5cbdb97e73e3480ab",
-      environment: "sandbox"
+      token: "test_6fe6ea7c8f5cbdb97e73e3480ab"
     });
 
     // 2) userId з query (?uid=...)
