--- a/checkout.html
+++ b/checkout.html
@@ -5,9 +5,6 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Оплата 30 днів</title>
 
-  <!-- Paddle v2 -->
-  <script src="https://cdn.paddle.com/paddle/v2/paddle.js"></script>
-
   <style>
     body { font-family: system-ui, Arial; margin: 0; padding: 24px; }
     .wrap { max-width: 560px; margin: 0 auto; }
@@ -20,34 +17,24 @@
   <div class="wrap">
     <h1>Оформлення ліцензії (30 днів)</h1>
     <div class="card">
-      <p id="status">Натисни, щоб відкрити чек-аут.</p>
+      <p id="status">Натисни, щоб перейти на сторінку оплати.</p>
       <button id="buy">Купити за $1.00</button>
       <p><small>Після оплати додаток автоматично отримає ліцензію.</small></p>
     </div>
   </div>
 
   <script>
-    // 1) Ініціалізація Paddle (sandbox визначається токеном test_…)
-    Paddle.Initialize({
-      token: "test_6fe6ea7c8f5cbdb97e73e3480ab"
-    });
+    // Hosted Checkout URL із Sandbox
+    const CHECKOUT_URL = "https://sandbox-pay.paddle.io/hsc_01k4xfd57yw0gtrng055343zcx_nqssasap169sqbzc0fd5scenxzpkka5d";
 
-    // 2) userId з query (?uid=...)
+    // userId з query (?uid=...)
     const params = new URLSearchParams(location.search);
     const userId = params.get("uid") || "guest";
 
-    // 3) Відкрити Hosted Checkout із sandbox priceId
-    const PRICE_ID = "pri_01k4tbx572v0wf1serterzxwnj";
-
     document.getElementById("buy").onclick = () => {
-      document.getElementById("status").textContent = "Відкриваю чек-аут…";
-      Paddle.Checkout.open({
-        items: [{ priceId: PRICE_ID, quantity: 1 }],
-        customer: { customData: { user_id: userId } },
-        closeCallback: () => {
-          document.getElementById("status").textContent = "Вікно закрито. Спробуй ще.";
-        }
-      });
+      document.getElementById("status").textContent = "Переходимо на оплату…";
+      // Редирект на Hosted Checkout із customData
+      window.location.href = CHECKOUT_URL + "?customer[custom_data][user_id]=" + encodeURIComponent(userId);
     };
   </script>
 </body>
