--- a/checkout.html
+++ b/checkout.html
@@ -4,12 +4,13 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Оплата 30 днів</title>
-
   <style>
-    body { font-family: system-ui, Arial; margin: 0; padding: 24px; }
+    body { font-family: system-ui, Arial; margin: 0; padding: 24px; background: #fafafa; }
     .wrap { max-width: 560px; margin: 0 auto; }
-    .card { border: 1px solid #ddd; border-radius: 12px; padding: 20px; }
-    button { padding: 12px 18px; border: 0; border-radius: 8px; cursor: pointer; }
+    .card { background: #fff; border: 1px solid #ddd; border-radius: 12px; padding: 20px; box-shadow: 0 2px 6px rgba(0,0,0,0.08); }
+    h1 { font-size: 20px; margin-bottom: 16px; }
+    button { padding: 12px 18px; border: 0; border-radius: 8px; cursor: pointer; background: #0070f3; color: #fff; font-size: 16px; }
+    button:hover { background: #0059c1; }
     small { color: #666; }
   </style>
 </head>
@@ -17,7 +18,7 @@
   <div class="wrap">
     <h1>Оформлення ліцензії (30 днів)</h1>
     <div class="card">
-      <p id="status">Натисни, щоб перейти на сторінку оплати.</p>
+      <p id="status">Натисни, щоб перейти на оплату.</p>
       <button id="buy">Купити за $1.00</button>
       <p><small>Після оплати додаток автоматично отримає ліцензію.</small></p>
     </div>
@@ -32,9 +33,10 @@
     const userId = params.get("uid") || "guest";
 
     document.getElementById("buy").onclick = () => {
-      document.getElementById("status").textContent = "Переходимо на оплату…";
-      // Редирект на Hosted Checkout із customData
-      window.location.href = CHECKOUT_URL + "?customer[custom_data][user_id]=" + encodeURIComponent(userId);
+      document.getElementById("status").textContent = "Перехід на сторінку оплати…";
+      // Формуємо URL із customData
+      const url = CHECKOUT_URL + "?customer[custom_data][user_id]=" + encodeURIComponent(userId);
+      window.location.href = url;
     };
   </script>
 </body>
