--- a/checkout.html
+++ b/checkout.html
@@ -2,35 +2,11 @@
 <html lang="uk">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Оплата 30 днів</title>
-  <style>
-    body { font-family: system-ui, Arial; margin: 0; padding: 24px; background: #fafafa; }
-    .wrap { max-width: 640px; margin: 0 auto; }
-    .card { background: #fff; border: 1px solid #ddd; border-radius: 12px; padding: 20px; box-shadow: 0 2px 6px rgba(0,0,0,.08); text-align: center; }
-    h1 { margin-bottom: 16px; }
-    a.buy-btn {
-      display: inline-block;
-      padding: 12px 20px;
-      border-radius: 8px;
-      background: #0070f3;
-      color: #fff;
-      text-decoration: none;
-      font-size: 16px;
-    }
-    a.buy-btn:hover { background: #0059c1; }
-    small { color: #666; display: block; margin-top: 12px; }
-  </style>
+  <title>Оплата успішна</title>
 </head>
 <body>
-  <div class="wrap">
-    <div class="card">
-      <h1>Оформлення ліцензії (30 днів)</h1>
-      <a class="buy-btn" href="https://sandbox-pay.paddle.io/hsc_01k4zj77sf9dwgdrpxj93nytws_y6qjp0e41q4p3nct566anygb8zxywce3">
-        Купити за $3.00
-      </a>
-      <small>Після оплати додаток автоматично отримає ліцензію.</small>
-    </div>
-  </div>
+  <h1>✅ Оплата успішна</h1>
+  <p>Дякуємо! Ваша ліцензія на 30 днів активована.</p>
+  <a href="index.html">Повернутися на головну</a>
 </body>
 </html>
