--- a/checkout.html
+++ b/checkout.html
@@ -31,7 +31,7 @@
 
     // 2) Ідентифікатори
     // Якщо маєш priceId (pri_...), ВСТАВ ЙОГО СЮДИ — це найкращий варіант:
-    const PRICE_ID = ""; // приклад: "pri_01xxxxxxxxxxxxxxxxxxxx"
+    const PRICE_ID = "pri_01k51yvrh7qpqrr1r7wxdvqkrp"; // приклад: "pri_01xxxxxxxxxxxxxxxxxxxx"
     // Твій productId (працює, якщо для продукту є дефолтна ціна):
     const PRODUCT_ID = "pro_01k51y9n9szjwkr8vme0p5e13s";
 
